Updating Skills section

--- a/index.html
+++ b/index.html
@@ -230,36 +230,11 @@
                     <!-- Programming Languages -->
                     <div class="col-md-6 animate-box">
                         <div class="skill-category ftco-animate">
-                            <h3>Programming Languages</h3>
-                            <div class="skill-item">
-                                <span class="skill-name">C</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">C++</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">Java</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
+                            <h3><i class="icon-code"></i> Programming Languages</h3>
+                            <div class="skill-tags">
+                                <span class="skill-tag advanced">C</span>
+                                <span class="skill-tag advanced">C++ & OOP</span>
+                                <span class="skill-tag intermediate">Java</span>
                             </div>
                         </div>
                     </div>
@@ -267,46 +242,13 @@
                     <!-- DevOps & Cloud -->
                     <div class="col-md-6 animate-box">
                         <div class="skill-category ftco-animate">
-                            <h3>DevOps & Cloud</h3>
-                            <div class="skill-item">
-                                <span class="skill-name">AWS</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">Docker</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">Jenkins</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">Terraform & Ansible</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
+                            <h3><i class="icon-cloud"></i> DevOps & Cloud</h3>
+                            <div class="skill-tags">
+                                <span class="skill-tag advanced">AWS</span>
+                                <span class="skill-tag intermediate">Docker</span>
+                                <span class="skill-tag learning">Jenkins</span>
+                                <span class="skill-tag learning">Terraform</span>
+                                <span class="skill-tag learning">Ansible</span>
                             </div>
                         </div>
                     </div>
@@ -314,46 +256,14 @@
                     <!-- Tools & Technologies -->
                     <div class="col-md-6 animate-box">
                         <div class="skill-category ftco-animate">
-                            <h3>Tools & Technologies</h3>
-                            <div class="skill-item">
-                                <span class="skill-name">Git & GitHub</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">Bash & Linux</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">Computer Networks</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">Nexus, JIRA, GitLab</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
+                            <h3><i class="icon-tools"></i> Tools & Technologies</h3>
+                            <div class="skill-tags">
+                                <span class="skill-tag advanced">Git & GitHub</span>
+                                <span class="skill-tag advanced">Bash & Linux</span>
+                                <span class="skill-tag intermediate">Computer Networks</span>
+                                <span class="skill-tag learning">Nexus</span>
+                                <span class="skill-tag learning">JIRA</span>
+                                <span class="skill-tag learning">GitLab</span>
                             </div>
                         </div>
                     </div>
@@ -361,52 +271,20 @@
                     <!-- Web Development -->
                     <div class="col-md-6 animate-box">
                         <div class="skill-category ftco-animate">
-                            <h3>Web Development</h3>
-                            <div class="skill-item">
-                                <span class="skill-name">HTML/CSS</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">JavaScript</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">React</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
-                            </div>
-                            <div class="skill-item">
-                                <span class="skill-name">Bootstrap</span>
-                                <div class="skill-level">
-                                    <div class="skill-proficiency advanced"></div>
-                                    <div class="skill-proficiency intermediate"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                    <div class="skill-proficiency"></div>
-                                </div>
+                            <h3><i class="icon-browser"></i> Web Development</h3>
+                            <div class="skill-tags">
+                                <span class="skill-tag intermediate">HTML/CSS</span>
+                                <span class="skill-tag intermediate">JavaScript</span>
+                                <span class="skill-tag learning">React</span>
+                                <span class="skill-tag intermediate">Bootstrap</span>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
+
 
         <!-- Project Section -->
         <section class="ftco-section ftco-project" id="projects-section">
