added class to skills

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         </section>
 
         <!-- Skills Section here -->>
-        <section class="ftco-section" id="skills-section">
+        <section class="ftco-section ftco-no-pb" id="skills-section">
             <div class="container">
                 <div class="row justify-content-center pb-5">
                     <div class="col-md-12 heading-section text-center ftco-animate">
