second update to skill section

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <div
                         class="col-md-12 heading-section text-center ftco-animate"
                     >
-                        <h1 class="big">Skills</h1>
+                        <h1 class="big big-2">Skills</h1>
                         <h2 class="mb-4">My Skills</h2>
                         <p>
                             Here are the skills I am contiuosly working on
