second update to skill section

--- a/index.html
+++ b/index.html
@@ -220,7 +220,17 @@
                     <div
                         class="col-md-12 heading-section text-center ftco-animate"
                     >
-                        <h1 class="big big-2">Skills</h1>
+                        <h1 class="big big-2 style=color: rgba(255, 255, 255, 0.08) !important;
+                            font-size: 8rem !important;
+                            position: absolute !important;
+                            left: 0;
+                            right: 0;
+                            font-weight: 900;
+                            z-index: -1;
+                            text-transform: uppercase;
+                            margin-top: -40px;">
+                            Skills
+                        </h1>
                         <h2 class="mb-4">My Skills</h2>
                         <p>
                             Here are the skills I am contiuosly working on
