improved skills section

--- a/index.html
+++ b/index.html
@@ -231,6 +231,23 @@
                 <div class="row">
                     <div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
+                            <h3>C, C++</h3>
+                            <div class="progress">
+                                <div
+                                    class="progress-bar color-1"
+                                    role="progressbar"
+                                    aria-valuenow="90"
+                                    aria-valuemin="0"
+                                    aria-valuemax="100"
+                                    style="width:95%"
+                                >
+                                </div>
+                            </div>
+                        </div>
+                    </div>    
+
+                    <div class="col-md-6 animate-box">
+                        <div class="progress-wrap ftco-animate">
                             <h3>GIT, GitHub</h3>
                             <div class="progress">
                                 <div
@@ -241,14 +258,13 @@
                                     aria-valuemax="100"
                                     style="width:60%"
                                 >
-                                    <span>60%</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
-                            <h3>BASH & Linux</h3>
+                            <h3>Linux, BASH</h3>
                             <div class="progress">
                                 <div
                                     class="progress-bar color-2"
@@ -258,7 +274,6 @@
                                     aria-valuemax="100"
                                     style="width:50%"
                                 >
-                                    <span>50%</span>
                                 </div>
                             </div>
                         </div>
@@ -275,24 +290,23 @@
                                     aria-valuemax="100"
                                     style="width:45%"
                                 >
-                                    <span>45%</span>
                                 </div>
                             </div>
                         </div>
                     </div>
+
                     <div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
-                            <h3>Jenkins &nbsp; &nbsp; 20%</h3>
+                            <h3>Jenkins</h3>
                             <div class="progress">
                                 <div
-                                    class="progress-bar color-4"
+                                    class="progress-bar color-3"
                                     role="progressbar"
-                                    aria-valuenow="90"
+                                    aria-valuenow="95"
                                     aria-valuemin="0"
                                     aria-valuemax="100"
-                                    style="width:20%"
+                                    style="width:45%"
                                 >
-
                                 </div>
                             </div>
                         </div>
@@ -300,17 +314,16 @@
 
 					<div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
-                            <h3>Terraform & Ansible &nbsp; &nbsp; &nbsp; &nbsp; 20%</h3>
+                            <h3>Terraform, Ansible</h3>
                             <div class="progress">
                                 <div
-                                    class="progress-bar color-6"
+                                    class="progress-bar color-3"
                                     role="progressbar"
-                                    aria-valuenow="80"
+                                    aria-valuenow="95"
                                     aria-valuemin="0"
                                     aria-valuemax="100"
-                                    style="width:20%"
+                                    style="width:45%"
                                 >
-
                                 </div>
                             </div>
                         </div>
@@ -321,31 +334,13 @@
                             <h3>AWS</h3>
                             <div class="progress">
                                 <div
-                                    class="progress-bar color-5"
+                                    class="progress-bar color-3"
                                     role="progressbar"
-                                    aria-valuenow="70"
+                                    aria-valuenow="95"
                                     aria-valuemin="0"
                                     aria-valuemax="100"
-                                    style="width:60%"
+                                    style="width:45%"
                                 >
-                                    <span>60%</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 animate-box">
-                        <div class="progress-wrap ftco-animate">
-                            <h3>Computer Networks</h3>
-                            <div class="progress">
-                                <div
-                                    class="progress-bar color-6"
-                                    role="progressbar"
-                                    aria-valuenow="80"
-                                    aria-valuemin="0"
-                                    aria-valuemax="100"
-                                    style="width:60%"
-                                >
-                                    <span>60%</span>
                                 </div>
                             </div>
                         </div>
@@ -353,20 +348,16 @@
 
                     <div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
-                            <h3>
-                                Front-end Development (HTML, CSS, JavaScript,
-                                Bootstrap, Reactjs) &nbsp; &nbsp; &nbsp; 40%
-                            </h3>
+                            <h3>Computer Network, OSI, TCP/IP, DHCP, IP, Subnet etc.</h3>
                             <div class="progress">
                                 <div
-                                    class="progress-bar color-6"
+                                    class="progress-bar color-3"
                                     role="progressbar"
-                                    aria-valuenow="80"
+                                    aria-valuenow="95"
                                     aria-valuemin="0"
                                     aria-valuemax="100"
-                                    style="width:40%"
+                                    style="width:45%"
                                 >
-
                                 </div>
                             </div>
                         </div>
@@ -374,21 +365,38 @@
 
                     <div class="col-md-6 animate-box">
                         <div class="progress-wrap ftco-animate">
-                            <h3>Other tools (NEXUS, JIRA, GitLab) &nbsp; &nbsp; &nbsp; 20% </h3>
+                            <h3>HTML, CSS, JavaScript, Reactjs</h3>
                             <div class="progress">
                                 <div
-                                    class="progress-bar color-6"
+                                    class="progress-bar color-3"
                                     role="progressbar"
-                                    aria-valuenow="80"
+                                    aria-valuenow="95"
                                     aria-valuemin="0"
                                     aria-valuemax="100"
-                                    style="width:20%"
+                                    style="width:45%"
                                 >
-
                                 </div>
                             </div>
                         </div>
                     </div>
+
+                    <div class="col-md-6 animate-box">
+                        <div class="progress-wrap ftco-animate">
+                            <h3>Nexus Jira, GitLab, Agile</h3>
+                            <div class="progress">
+                                <div
+                                    class="progress-bar color-3"
+                                    role="progressbar"
+                                    aria-valuenow="95"
+                                    aria-valuemin="0"
+                                    aria-valuemax="100"
+                                    style="width:45%"
+                                >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
