--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_33.jpeg);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/tad_ofice.jpeg);">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -88,7 +88,7 @@
                         >
                             <div
                                 class="one-third js-fullheight order-md-last img"
-                                style="background-image:url(images/IMG_0604.jpg);"
+                                style="background-image:url(images/bg_benesta.jpeg);"
                             >
                                 <div class="overlay"></div>
                             </div>
