Added new images

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         >
                             <div
                                 class="one-third js-fullheight order-md-last img"
-                                style="background-image:url(images/bg_benesta.jpeg);"
+                                style="background-image:url(images/ist_out.jpeg);"
                             >
                                 <div class="overlay"></div>
                             </div>
