Added github icon

--- a/index.html
+++ b/index.html
@@ -41,8 +41,11 @@
                     href="https://www.linkedin.com/in/tadeeb/"
                     target="_blank"
                     >Tadeeb
-                    <img src="./images/linkedin1.png" style="padding-left: 5%;"
-                /></a>
+                    <img src="./images/linkedin1.png" style="padding-left: 5%;"/>
+                </a>
+                <a href="https://github.com/smTadeeb">
+                    <img src="./images/github-sign (1).png" style="padding-left: 8%;"/>
+                </a>
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav nav ml-auto">
