Added github icon

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     >Tadeeb
                     <img src="./images/linkedin1.png" style="padding-left: 5%;"/>
                 </a>
-                <a href="https://github.com/smTadeeb">
+                <a class="navbar-brand" href="https://github.com/smTadeeb" target="_blank">
                     <img src="./images/github-sign (1).png" style="padding-left: 8%;"/>
                 </a>
 
