Added github icon

--- a/index.html
+++ b/index.html
@@ -36,29 +36,32 @@
             id="ftco-navbar"
         >
             <div class="container">
-                <a
-                    class="navbar-brand"
-                    href="https://www.linkedin.com/in/tadeeb/"
-                    target="_blank"
-                    >Tadeeb
-                    <img src="./images/linkedin1.png" style="padding-left: 5%;"/>
-                </a>
-                <a class="navbar-brand" href="https://github.com/smTadeeb" target="_blank">
-                    <img src="./images/github-sign (1).png" style="padding-left: 8%;"/>
-                </a>
+                <div class="collapse navbar-collapse" id="ftco-nav">
+                    <a
+                        class="nav-item"
+                        href="https://www.linkedin.com/in/tadeeb/"
+                        target="_blank"
+                        >Tadeeb
+                        <img src="./images/linkedin1.png" style="padding-left: 5%;"/>
+                    </a>
 
-	      <div class="collapse navbar-collapse" id="ftco-nav">
-	        <ul class="navbar-nav nav ml-auto">
-	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
-	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
-	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-	          <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
-	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
-			  <li class="nav-item"><a href="#cert-section" class="nav-link"><span>Certifications</span></a></li>
-			  <li class="nav-item"><a href="#extra-section" class="nav-link"><span>Extra-curricular</span></a></li>
-	        </ul>
-	      </div>
+                    <a class="nav-item" href="https://github.com/smTadeeb" target="_blank">
+                        <img src="./images/github-sign (1).png" style="padding-left: 8%;"/>
+                    </a>
+                </div>
+
+                <div class="collapse navbar-collapse" id="ftco-nav">
+                    <ul class="navbar-nav nav ml-auto">
+                    <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
+                    <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
+                    <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+                    <li class="nav-item"><a href="#skills-section" class="nav-link"><span>Skills</span></a></li>
+                    <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+                    <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+                    <li class="nav-item"><a href="#cert-section" class="nav-link"><span>Certifications</span></a></li>
+                    <li class="nav-item"><a href="#extra-section" class="nav-link"><span>Extra-curricular</span></a></li>
+                    </ul>
+                </div>
 	    </div>
 	  </nav>
 	  <section id="home-section" class="hero">
