--- a/index.html
+++ b/index.html
@@ -50,14 +50,13 @@
                 </div>
 	        </div>
 	  </nav>
-      <br>
 	  <section id="home-section" class="hero">
 		  <div class="home-slider  owl-carousel" >
 	      <div class="slider-item ">
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/tad_ofice.jpeg);">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/tad_ofice.jpeg); background-size: 80%;">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
