--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/tad_ofice.jpeg); background-size: 80%;">
+	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/tad_ofice.jpeg); background-size: 85%;">
 	          		<div class="overlay"></div>
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
@@ -80,7 +80,7 @@
                         >
                             <div
                                 class="one-third js-fullheight order-md-last img"
-                                style="background-image:url(images/ist_out.jpeg);"
+                                style="background-image:url(images/ist_out.jpeg); background-size: 85%;"
                             >
                                 <div class="overlay"></div>
                             </div>
