--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
             <div class="container">
                 <div class="collapse navbar-collapse" id="ftco-nav">
                     <ul class="navbar-nav nav ml-auto">
+                    <li class="nav-item">
+                        <a href="https://github.com/smtadeeb" target="_blank" class="nav-link">
+                            <i class="fab fa-github"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://www.linkedin.com/in/tadeeb" target="_blank" class="nav-link">
+                            <i class="fab fa-linkedin"></i>
+                        </a>
+                    </li>
                     <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
                     <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
                     <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
