Icrease github, linkedin icon size

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
                     <ul class="navbar-nav nav ml-auto">
                     <li class="nav-item">
                         <a href="https://github.com/smtadeeb" target="_blank" class="nav-link">
-                            <i class="fab fa-github"></i>
+                            <i class="fab fa-github fa-2x"></i>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a href="https://www.linkedin.com/in/tadeeb" target="_blank" class="nav-link">
-                            <i class="fab fa-linkedin"></i>
+                            <i class="fab fa-linkedin fa-2x"></i>
                         </a>
                     </li>
                     <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
