icons for mobile screen

--- a/index.html
+++ b/index.html
@@ -31,6 +31,17 @@
 
     </head>
     <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
+
+       <!-- Fixed Social Icons (Mobile only) -->
+<div class="social-icons d-lg-none">
+  <a href="https://github.com/smtadeeb" target="_blank">
+    <i class="fab fa-github"></i>
+  </a>
+  <a href="https://www.linkedin.com/in/tadeeb" target="_blank">
+    <i class="fab fa-linkedin"></i>
+  </a>
+</div>
+
         <nav
             class="navbar navbar-expand-lg navbar-dark ftco_navbar ftco-navbar-light site-navbar-target"
             id="ftco-navbar"
