--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
        <!-- Fixed Social Icons (Mobile only) -->
         <div class="social-icons d-lg-none">
         <a href="https://github.com/smtadeeb" target="_blank">
-            <i class="fab fa-github fa-2x"></i>
+            <i class="fab fa-github"></i>
         </a>
         <a href="https://www.linkedin.com/in/tadeeb" target="_blank">
-            <i class="fab fa-linkedin fa-2x"></i>
+            <i class="fab fa-linkedin"></i>
         </a>
         </div>
 
