icons color changed

--- a/index.html
+++ b/index.html
@@ -29,29 +29,28 @@
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
-        <style>
-/* Make sure parent alignment doesn't interfere */
-.social-icons {
-    all: unset; /* remove inherited styles */
-    position: fixed !important; /* force it to stay fixed */
-    top: 50% !important;
-    left: 10px !important; /* force left */
-    transform: translateY(-50%) !important;
-    display: flex !important;
-    flex-direction: column !important;
-    z-index: 10000 !important;
-}
+       <style>
+/* Social icons horizontal on top-left for mobile */
+@media (max-width: 991px) { /* mobile and tablets */
+    .social-icons {
+        position: fixed !important;
+        top: 10px;       /* distance from top */
+        left: 10px;      /* distance from left */
+        display: flex !important;
+        flex-direction: row !important; /* horizontal */
+        gap: 10px;       /* spacing between icons */
+        z-index: 1000;
+    }
 
-/* Style for icons */
-.social-icons a {
-    color: rgb(255, 255, 255);
-    margin: 10px 0;
-    font-size: 1.8rem;
-    text-decoration: none;
-}
+    .social-icons a {
+        font-size: 1.8rem;
+        color: rgb(255, 255, 255);
+        text-decoration: none;
+    }
 
-.social-icons a:hover {
-    color: #0090dd;
+    .social-icons a:hover {
+        color: #0090dd;
+    }
 }
 </style>
 
