icons color changed plus distance

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
     .social-icons {
         position: fixed !important;
         top: 10px;       /* distance from top */
-        left: 10px;      /* distance from left */
+        left: 14px;      /* distance from left */
         display: flex !important;
         flex-direction: row !important; /* horizontal */
-        gap: 10px;       /* spacing between icons */
+        gap: 12px;       /* spacing between icons */
         z-index: 1000;
+        background-color: #000; /* black background */
+        padding: 5px 10px;      /* space inside black bar */
+        border-radius: 5px;     /* optional: rounded edges */
     }
 
     .social-icons a {
