project links updated

--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                             <div class="text text-center p-4">
                                 <h3>
                                     <a
-                                        href="https://drive.google.com/file/d/1Um83LP-cZixHVRNq7lM-uOy3d9x19JQ2/view?usp=share_link"
+                                        href="https://drive.google.com/file/d/1AN5bTsSL6gtHMwnz_HKRKyc19cEyOAV-/view?usp=sharing"
                                         target="_blank"
                                         >Architecture Evolution over AWS</a
                                     >
@@ -423,7 +423,7 @@
                             <div class="text text-center p-4">
                                 <h3>
                                     <a
-                                        href="https://drive.google.com/file/d/177lOFJA0K57AlMt_HLAZwzbBSKs_cr8s/view?usp=share_link"
+                                        href="https://drive.google.com/file/d/1y5JBmx9OGOf1Y8JPbpKMnCtp_4fE7dFY/view?usp=sharing"
                                         target="_blank"
                                         >SufiMakan Restaurant website</a
                                     >
@@ -442,7 +442,7 @@
                             <div class="text text-center p-4">
                                 <h3>
                                     <a
-                                        href="https://drive.google.com/file/d/1hnqUMuyILJeb8nHoQpmbuO27AJeciv8o/view?usp=share_link"
+                                        href="https://drive.google.com/file/d/1x8jWFBIpAW2_W6rqBzUoLMi6n2g2T0Vn/view?usp=sharing"
                                         target="_blank"
                                         >Serverless Architecture</a
                                     >
@@ -461,7 +461,7 @@
                             <div class="text text-center p-4">
                                 <h3>
                                     <a
-                                        href="https://drive.google.com/file/d/15XzGtN9QQ0-RskS7bFjy6OgAoXKBCnvm/view?usp=share_link"
+                                        href="https://drive.google.com/file/d/17DESiRDJza42bzDC7DVRcVQDmuuBYGl_/view?usp=sharing"
                                         target="_blank"
                                         >Inventory Management Desktop App</a
                                     >
@@ -481,7 +481,7 @@
                                     <div class="text text-center p-4">
                                         <h3>
                                             <a
-                                                href="https://drive.google.com/file/d/1PbK_XlzKIGZ2V66xXHng7zrfUSayg0VL/view?usp=share_link"
+                                                href="https://drive.google.com/file/d/1DvK_oTXnhB1z34kBFmtS4jVyndhICAnu/view?usp=sharing"
                                                 target="_blank"
                                                 >Database Design</a
                                             >
@@ -523,55 +523,12 @@
                             <div class="text text-center p-4">
                                 <h3>
                                     <a
-                                        href="https://drive.google.com/file/d/1T_fnAU61QFIaXMWHyZMmLlxeHqVg8Pv-/view?usp=share_link"
+                                        href="https://drive.google.com/file/d/13u3i-72DG0ar3ayVZMWlLWqxD7AhrYxa/view?usp=sharing"
                                         target="_blank"
                                         >Dockerising an application</a
                                     >
                                 </h3>
                                 <span>Docker</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div
-                            class="project img ftco-animate d-flex justify-content-center align-items-center"
-                            style="background-image: url(images/mgr.png);"
-                        >
-                            <div class="overlay"></div>
-                            <div class="text text-center p-4">
-                                <h3>
-                                    <a
-                                        href="https://drive.google.com/file/d/1Wp3ivqSV3ta2RLVD01h4POsW0FyD8Rig/view?usp=share_link"
-                                        target="_blank"
-                                        >Migrating companies exiting
-                                        infrastructure over AWS</a
-                                    >
-                                </h3>
-                                <span
-                                    >AWS (CloudFormation, VPC, Subnets, NAT,
-                                    IGW, SG, S3, ALB, ASG etc...)</span
-                                >
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-md-4">
-                        <div
-                            class="project img ftco-animate d-flex justify-content-center align-items-center"
-                            style="background-image: url(images/bash.png);"
-                        >
-                            <div class="overlay"></div>
-                            <div class="text text-center p-4">
-                                <h3>
-                                    <a
-                                        href="https://drive.google.com/drive/folders/1nWkHz9uTYTdl04luADPRos4dwegXkGtZ?usp=share_link"
-                                        target="_blank"
-                                        >Automating virtual host creation on
-                                        apache server</a
-                                    >
-                                </h3>
-                                <span>Ubuntu, BASH scripts, Wordpress</span>
                             </div>
                         </div>
                     </div>
